--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="/style.css">
+
   <title>Frontend Mentor | Room homepage</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,11 +16,12 @@
   </style>
 </head>
 <body>
-  Home
-  Shop
-  About
-  Contact
-
+  <nav class="main-nav">
+    <a>Home</a>
+    <a>Shop</a>
+    <a>About</a>
+    <a>Contact</a>
+  </nav>
   Discover innovative ways to decorate
 
   We provide unmatched quality, comfort, and style for property owners across the country. 
