--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./style.css">
 
+  <script type="text/javascript" src="./js/carousel.js" ></script>
+
   <title>Frontend Mentor | Room homepage</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -16,54 +18,68 @@
   </style>
 </head>
 <body>
-  <nav class="main-nav">
-    <a>Home</a>
-    <a>Shop</a>
-    <a>About</a>
-    <a>Contact</a>
-  </nav>
-  <div class="slides">
-    <div class="slide">
-      <h2>Discover innovative ways to decorate</h2>
+  <header>
+    <img id="branding" src="./images/logo.svg"/>
+    <nav class="main-nav">
+      <a href="#">home</a>
+      <a href="#">shop</a>
+      <a href="#">about</a>
+      <a href="#">contact</a>
+    </nav>
+  </header>
+  <main class="site">
+    <div class="slides grid-18 grid-col-all">
+      <div class="slide grid-18 grid-col-all grid-center grid-center">
+        <img class="slide-image" src="./images/desktop-image-hero-1.jpg"/>
+        <div class="slide-content">
+          <h1 class="slide-title">Discover innovative ways to decorate</h1>
 
-      <p>We provide unmatched quality, comfort, and style for property owners across the country. 
-      Our experts combine form and function in bringing your vision to life. Create a room in your 
-      own style with our collection and make your property a reflection of you and what you love.</p>
+          <p class="slide-text">We provide unmatched quality, comfort, and style for property owners across the country. Our experts combine form and function in bringing your vision to life. Create a room in your own style with our collection and make your property a reflection of you and what you love.</p>
 
-      <a>Shop now</a>
+          <a class="link-button" href="#">Shop now<img src="./images/icon-arrow.svg"/></a>
+        </div>
+      </div>
+
+      <!-- <div class="slide">
+        <img class="slide-image" src="./images/desktop-image-hero-2.jpg"/>
+        <div class="slide-content">
+
+          <h2>We are available all across the globe</h2>
+
+          <p>With stores all over the world, it's easy for you to find furniture for your home or place of business. Locally, we’re in most major cities throughout the country. Find the branch nearest you using our store locator. Any questions? Don't hesitate to contact us today.</p>
+
+          <a href="#">Shop now<img src="./images/icon-arrow.svg"/></a>
+        </div>
+      </div>
+
+      <div class="slide">
+        <img class="slide-image" src="./images/desktop-image-hero-3.jpg"/>
+        <div class="slide-content">
+          <h2>Manufactured with the best materials</h2>
+
+          <p>Our modern furniture store provide a high level of quality. Our company has invested in advanced technology to ensure that every product is made as perfect and as consistent as possible. With three decades of experience in this industry, we understand what customers want for their home and office.</p>
+
+          <a href="#">Shop now<img src="./images/icon-arrow.svg"/></a>
+        </div>
+      </div> -->
+      <div class="arrows">
+        <button class="arrow" id="button-left"><img src="./images/icon-angle-left.svg"/></button>
+        <button class="arrow" id="button-right"><img src="./images/icon-angle-right.svg"/></button>
+      </div>
     </div>
+    <div class="about-section grid-18 grid-center grid-col-all">
+      <img class="about-image" src="./images/image-about-dark.jpg">
+      <div class="about-text">
+        <h2 class="spaced weight-7 uppercase space-5">About our furniture</h2>
 
-    <div class="slide">
-      <h2>We are available all across the globe</h2>
-
-      <p>With stores all over the world, it's easy for you to find furniture for your home or place of business. 
-      Locally, we’re in most major cities throughout the country. Find the branch nearest you using our 
-      store locator. Any questions? Don't hesitate to contact us today.</p>
-
-      <a>Shop now</a>
+        <p>Our multifunctional collection blends design and function to suit your individual taste. Make each room unique, or pick a cohesive theme that best express your interests and what inspires you. Find the furniture pieces you need, from traditional to contemporary styles or anything in between. Product specialists are available to help you create your dream space.</p>
+      </div>
+      <img class="about-image" src="./images/image-about-light.jpg">
     </div>
-
-    <div class="slide">
-      <h2>Manufactured with the best materials</h2>
-
-      <p>Our modern furniture store provide a high level of quality. Our company has invested in advanced technology 
-      to ensure that every product is made as perfect and as consistent as possible. With three decades of 
-      experience in this industry, we understand what customers want for their home and office.</p>
-
-      <a>Shop now</a>
-    </div>
-  </div>
-  <div class="about-section">
-    About our furniture
-
-    Our multifunctional collection blends design and function to suit your individual taste.
-    Make each room unique, or pick a cohesive theme that best express your interests and what
-    inspires you. Find the furniture pieces you need, from traditional to contemporary styles
-    or anything in between. Product specialists are available to help you create your dream space.
-  </div>
+  </main>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="#" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#" href="#">Your Name Here</a>.
   </div>
 </body>
 </html>
