--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./style.css">
 
   <script type="text/javascript" src="./js/carousel.js" ></script>
+  <script type="text/javascript" src="./js/nav.js" ></script>
 
   <title>Frontend Mentor | Room homepage</title>
 
@@ -19,8 +20,10 @@
 </head>
 <body>
   <header>
+    <button id="open-menu"><img src="./images/icon-hamburger.svg"/></button>
     <img id="branding" src="./images/logo.svg"/>
     <nav class="main-nav">
+      <button id="close-button"><img src="./images/icon-close.svg"></button>
       <a href="#">home</a>
       <a href="#">shop</a>
       <a href="#">about</a>
@@ -31,6 +34,7 @@
     <div class="slides grid-18 grid-col-all">
       <div class="slide grid-18 grid-col-all grid-center grid-center">
         <img class="slide-image" src="./images/desktop-image-hero-1.jpg"/>
+        <img class="slide-image-mobile width-full" src="./images/mobile-image-hero-1.jpg"/>
         <div class="slide-content">
           <h1 class="slide-title">Discover innovative ways to decorate</h1>
 
