re-instated some of the grid work and changed the nesting so that the arrows sit correctly on the mobile and desktop. sized images correctly to allow them to fill space properly

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     </nav>
   </header>
   <main class="site">
-    <div class="row m-0 p-0 fader slides"><!-- slides grid-18 grid-col-all"> -->
-      <img class="col-md-7 slide-image m-0 p-0" src="./images/desktop-image-hero-1.jpg"/>
+    <div class="grid-18 m-0 p-0 fader slides"><!-- slides grid-18 grid-col-all"> -->
+      <img class="slide-image m-0 p-0" src="./images/desktop-image-hero-1.jpg"/>
       <img class="slide-image-mobile width-full m-0 p-0" src="./images/mobile-image-hero-1.jpg"/>
-      <div class="col-md-5 p-0 slide-content-container">
-        <div class="slide-content p-sm-0 col-12">
+      <div class="p-0 slide-content-container">
+        <div class="slide-content col-12">
           <h1 class="slide-title">Discover innovative ways to decorate</h1>
 
           <p class="slide-text">We provide unmatched quality, comfort, and style for property owners across the country. Our experts combine form and function in bringing your vision to life. Create a room in your own style with our collection and make your property a reflection of you and what you love.</p>
@@ -76,14 +76,14 @@
       </div> -->
 
     </div>
-    <div class="row m-0 p-0 align-items-center"><!-- about-section grid-18 grid-center grid-col-all"> -->
-      <img class="about-image col-md-4 p-0 m-0" src="./images/image-about-dark.jpg">
-      <div class="col-md-4 p-3">
+    <div class="m-0 p-0 align-items-center about-section grid-18 grid-center grid-col-all">
+      <img class="about-image p-0 m-0" src="./images/image-about-dark.jpg">
+      <div class="about-text">
         <h2 class="spaced weight-7 uppercase space-5">About our furniture</h2>
 
         <p class="m-0">Our multifunctional collection blends design and function to suit your individual taste. Make each room unique, or pick a cohesive theme that best express your interests and what inspires you. Find the furniture pieces you need, from traditional to contemporary styles or anything in between. Product specialists are available to help you create your dream space.</p>
       </div>
-      <img class="about-image col-md-4 p-0 m-0" src="./images/image-about-light.jpg">
+      <img class="about-image p-0 m-0" src="./images/image-about-light.jpg">
     </div>
   </main>
   <div class="attribution">
