--- a/index.html
+++ b/index.html
@@ -14,13 +14,7 @@
   <script type="text/javascript" src="./js/nav.js" ></script>
 
   
-  <title>Frontend Mentor | Room homepage</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Frontend Mentor | Oscar AC | Room homepage</title>
 </head>
 <body>
   <header>
@@ -51,30 +45,6 @@
           <button class="arrow" id="button-right"><img src="./images/icon-angle-right.svg"/></button>
         </div>
       </div>
-
-      <!-- <div class="slide">
-        <img class="slide-image" src="./images/desktop-image-hero-2.jpg"/>
-        <div class="slide-content">
-
-          <h2>We are available all across the globe</h2>
-
-          <p>With stores all over the world, it's easy for you to find furniture for your home or place of business. Locally, we’re in most major cities throughout the country. Find the branch nearest you using our store locator. Any questions? Don't hesitate to contact us today.</p>
-
-          <a href="#">Shop now<img src="./images/icon-arrow.svg"/></a>
-        </div>
-      </div>
-
-      <div class="slide">
-        <img class="slide-image" src="./images/desktop-image-hero-3.jpg"/>
-        <div class="slide-content">
-          <h2>Manufactured with the best materials</h2>
-
-          <p>Our modern furniture store provide a high level of quality. Our company has invested in advanced technology to ensure that every product is made as perfect and as consistent as possible. With three decades of experience in this industry, we understand what customers want for their home and office.</p>
-
-          <a href="#">Shop now<img src="./images/icon-arrow.svg"/></a>
-        </div>
-      </div> -->
-
     </div>
     <div class="m-0 p-0 align-items-center about-section grid-18 grid-center grid-col-all">
       <img class="about-image p-0 m-0" src="./images/image-about-dark.jpg">
@@ -88,7 +58,7 @@
   </main>
   <div class="attribution">
     Challenge by <a href="#" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#" href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/Oscar-ac" href="#">Oscar AC</a>.
   </div>
 </body>
 </html>
