updated to include alt text and change buttons to divs

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   </header>
   <main class="site">
     <div class="grid-18 m-0 p-0 fader slides"><!-- slides grid-18 grid-col-all"> -->
-      <img class="slide-image m-0 p-0" src="./images/desktop-image-hero-1.jpg"/>
-      <img class="slide-image-mobile width-full m-0 p-0" src="./images/mobile-image-hero-1.jpg"/>
+      <img class="slide-image m-0 p-0" src="./images/desktop-image-hero-1.jpg" alt="Stylish white chairs and table with a bonsai tree on top."/>
+      <img class="slide-image-mobile width-full m-0 p-0" src="./images/mobile-image-hero-1.jpg" alt="Stylish white chairs and table with a bonsai tree on top."/>
       <div class="p-0 slide-content-container">
         <div class="slide-content col-12">
           <h1 class="slide-title">Discover innovative ways to decorate</h1>
@@ -41,19 +41,19 @@
           <a class="link-button" href="#">Shop now<img src="./images/icon-arrow.svg"/></a>
         </div>
         <div class="arrows col-3 p-0 m-0">
-          <button class="arrow" id="button-left"><img src="./images/icon-angle-left.svg"/></button>
-          <button class="arrow" id="button-right"><img src="./images/icon-angle-right.svg"/></button>
+          <div class="arrow" id="button-left"><img src="./images/icon-angle-left.svg"/></div>
+          <div class="arrow" id="button-right"><img src="./images/icon-angle-right.svg"/></div>
         </div>
       </div>
     </div>
     <div class="m-0 p-0 align-items-center about-section grid-18 grid-center grid-col-all">
-      <img class="about-image p-0 m-0" src="./images/image-about-dark.jpg">
+      <img class="about-image p-0 m-0" src="./images/image-about-dark.jpg" alt="dimly lit bedroom with a coffee table and chairs in the foreground">
       <div class="about-text">
         <h2 class="spaced weight-7 uppercase space-5">About our furniture</h2>
 
         <p class="m-0">Our multifunctional collection blends design and function to suit your individual taste. Make each room unique, or pick a cohesive theme that best express your interests and what inspires you. Find the furniture pieces you need, from traditional to contemporary styles or anything in between. Product specialists are available to help you create your dream space.</p>
       </div>
-      <img class="about-image p-0 m-0" src="./images/image-about-light.jpg">
+      <img class="about-image p-0 m-0" src="./images/image-about-light.jpg" alt="white room with a tall white chair">
     </div>
   </main>
   <div class="attribution">
