updated to include alt text and change buttons to divs

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <body>
   <header>
     <button id="open-menu"><img src="./images/icon-hamburger.svg"/></button>
-    <img id="branding" src="./images/logo.svg"/>
+    <img id="branding" src="./images/logo.svg" alt="room logo"/>
     <nav class="main-nav">
-      <button id="close-button"><img src="./images/icon-close.svg"></button>
+      <button id="close-button"><img src="./images/icon-close.svg" alt="close button in the shape of an X"></button>
       <a href="#">home</a>
       <a href="#">shop</a>
       <a href="#">about</a>
@@ -38,11 +38,11 @@
 
           <p class="slide-text">We provide unmatched quality, comfort, and style for property owners across the country. Our experts combine form and function in bringing your vision to life. Create a room in your own style with our collection and make your property a reflection of you and what you love.</p>
 
-          <a class="link-button" href="#">Shop now<img src="./images/icon-arrow.svg"/></a>
+          <a class="link-button" href="#">Shop now<img src="./images/icon-arrow.svg" alt="right pointing arrow"/></a>
         </div>
         <div class="arrows col-3 p-0 m-0">
-          <div class="arrow" id="button-left"><img src="./images/icon-angle-left.svg"/></div>
-          <div class="arrow" id="button-right"><img src="./images/icon-angle-right.svg"/></div>
+          <div class="arrow" id="button-left"><img src="./images/icon-angle-left.svg" alt="left angled chevron"/></div>
+          <div class="arrow" id="button-right"><img src="./images/icon-angle-right.svg" alt="right angled chevron"/></div>
         </div>
       </div>
     </div>
